------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

May 7 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Getting killed by an own thunder hammer or Turox now gives a unique message
	* A voluntary action is now terminated if a mage attacks from long range
	* Corrected a bug that caused bone to spoil way too fast

May 7 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Documented 1 idea and 1 bug

May 6 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Biting monsters now capture the severed bodyparts of the enemy
	* Eddies are no longer charmable as this could be abused
	* Corrected a small bug in the square memorized descriptions
	* Cloned weapon accustomizations are now separated, so that using two
	  cloned items doesn't increase one common sweaponskill but two
	  (this was unbelievably difficult, so there might be obscure bugs)
	* Cloaks now *really* can break
	* Corrected a small bug concerning the handling of special monsters during
	  bonefile creation
	* Version updated to 0.420
	* Removed lots of debug tests
	* Corrected a fatal bug in the door booby trap code that occurred often
	  after earthquakes
	* The enner beast is now a little less insane
	* Doubled the time bone needs to spoil

May 5 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Hands no longer tingle when praying to Loricatus handless
	* Monsters don't walk to smoke for fun
	* Sickle and scythe are better with plants than other items

May 5 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Added version information to bone files
	* Broken and intact war hammers, a torn cloak and a vacuum cleaner added to
	  item.pcx by Kahvi
	* Broken and intact war hammer wielded pictures added to humanoid.pcx by me