@@ -51,3 +51,5 @@ Sophos doesn't accept parchment golem corpses.
 Using a wand of door creation in shops is allowed.
 Do psi waves damage armor?
 Do new bodyparts of player clones work properly?
+//Pickaxes can't dig squares on the edges but explosions can destroy them. 
+Chests in inventory cannot be unlocked.
