@@ -1004,7 +1004,8 @@ bool commandsystem::Go(character* Char)
 
   Go->SetIsWalkingInOpen(OKDirectionsCounter > 2);
   Char->SetAction(Go);
-  Go->Handle();
+  Char->EditAP(Char->GetStateAPGain(100)); // gum solution
+  Char->GoOn(Go,true);
   return Char->GetAction() != 0;
 }
 
