@@ -259,3 +259,8 @@ god* olterrain::GetMasterGod() const
 {
   return game::GetGod(GetConfig());
 }
+
+bool olterrain::CanBeDestroyed() const
+{
+  return DataBase->CanBeDestroyed && (GetPos().X != 0 && GetPos().Y != 0 && GetPos().X != GetLevel()->GetXSize() - 1 && GetPos().Y != GetLevel()->GetYSize() - 1) || GetLevel()->IsOnGround();
+}
