@@ -6,7 +6,11 @@ This file contains SPOILERS, which might ruin your IVAN experience totally. The 
 is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
+May 8 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
+	* Go command stops when entering or leaving rooms
+	* Explosions don't destroy the edge tiles anymore.
+	
 May 7 2003 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* Getting killed by an own thunder hammer or Turox now gives a unique message
